# Thunder-Note-Server

./: .gitignore  Cargo.toml  README.md  index.php  settings.conf
api/v1/notes/: index.php
migrations/: 20241022133857_create-db-schema.sql  20241022142802_create-db-schema.sql
src/: main.rs
